Remove experimental folders from git tracking
Keep only paper-related files:
- final/ (configs, datasets - models excluded due to size)
- docs/ (results, lexicon)
- utils/ (evaluation and baseline scripts)
- README.md, README_IMPLEMENTATION.md, STRUCTURE.md

Excluded from git (kept locally):
- v2/, v3/, archive/, emotion/, renderer/ (experimental code)
- cache/ (pre-computed embeddings)
- *.pt model files (too large, use external hosting)
- *.wav audio outputs (generated files)

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,31 @@ FINAL_*.md
 ICASSP_REVIEW_*.md
 verify_technical_claims.py
 
+# Experimental folders (not used in paper)
+v2/
+v3/
+archive/
+emotion/
+renderer/
+
+# Cache and temporary files
+cache/
+*.pyc
+__pycache__/
+.ipynb_checkpoints/
+*.pt
+!final/models/*.pt
+
+# Large experiment outputs
+*.wav
+*.mp3
+*.flac
+
+# IDE and system files
+.vscode/
+.idea/
+.DS_Store
+
 # Keep only these documentation files:
 !README.md
 !README_IMPLEMENTATION.md
